--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
